infrastructure/cloudformation/template.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Sample CloudFormation Template for CSYE 6225 - Fall 2017",
    "Resources": {
         
        "EC2InstanceSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
            "GroupDescription": "Sample EC2Instabce security group",
            "GroupName":"csye6225-webapp",
            "VpcId":{"Ref":"ParamVpcID"}
                          }
                         },
        "RDSSG": {
            "Type": "AWS::RDS::DBSecurityGroup",
            "Properties": {
            "GroupDescription": "Sample RDS security group",
            "EC2VpcId":{"Ref":"ParamVpcID"}
                           }
                 },
        
       "EC2InstanceSGInboundRule1": {
           "Type": "AWS::EC2::SecurityGroupIngress",
           "Properties":{
           "IpProtocol": "tcp",
           "FromPort": "22",
           "ToPort": "22",
           "CidrIp": "0.0.0.0/0",
           "GroupId": {"Fn::GetAtt": ["EC2InstanceSG", "GroupId"]}      
      }
    },
       "EC2InstanceSGInboundRule2": {
           "Type": "AWS::EC2::SecurityGroupIngress",
           "Properties":{
           "IpProtocol": "tcp",
           "FromPort": "80",
           "ToPort": "80",
           "CidrIp": "0.0.0.0/0",
           "GroupId": {"Fn::GetAtt": ["EC2InstanceSG", "GroupId"]}       
      }
    },
       "EC2InstanceSGInboundRule3": {
           "Type": "AWS::EC2::SecurityGroupIngress",
           "Properties":{
           "IpProtocol": "tcp",
           "FromPort": "443",
           "ToPort": "443",
           "CidrIp": "0.0.0.0/0",
           "GroupId": {"Fn::GetAtt": ["EC2InstanceSG", "GroupId"]}        
      }
    },
       "RDSSGInboundRule1": {
           "Type": "AWS::RDS::DBSecurityGroupIngress",
           "Properties":{
           "DBSecurityGroupName":{"Ref":"RDSSG"},
           "EC2SecurityGroupId": {"Fn::GetAtt": ["EC2InstanceSG","GroupId"]},   
      }
    },

  "DynamoDB":{
  "Type" : "AWS::DynamoDB::Table",
  "Properties" : {
    "AttributeDefinitions" : [{
            "AttributeName":"id",
            "AttributeType":"S"}],
    "KeySchema" : [{
        "AttributeName":"id",
        "KeyType":"HASH"}],
    "ProvisionedThroughput" : {
         "ReadCapacityUnits":"5",
         "WriteCapacityUnits":"5"},
    "TableName" : "csye6225"
}  
},
  
     "myDBSubnetGroup" : {
         "Type" : "AWS::RDS::DBSubnetGroup",
         "Properties" : {
            
            "DBSubnetGroupDescription" : "description",
            "SubnetIds" : [ {"Ref":"ParamSubnetId1"}, {"Ref":"ParamSubnetId2"}, {"Ref":"ParamSubnetId3"}, {"Ref":"ParamSubnetId4"} ]             
} 
},
     "DBInstance":{
          "Type" : "AWS::RDS::DBInstance",
         "Properties" :{
    "Engine" : "MySql",
    "EngineVersion" : "5.6.35",
    "DBInstanceClass" : "db.t2.medium",
    "MultiAZ":"false",
    "StorageType" : "standard",
    "AllocatedStorage" : "10",
    "DBInstanceIdentifier" : "csye6225-fall2017",
    "MasterUsername" : "csye6225master",
    "MasterUserPassword" : "csye6225password",
    "DBSubnetGroupName" : {"Ref":"myDBSubnetGroup"},
    "DBSecurityGroups":[{"Ref":"RDSSG"}],
    "PubliclyAccessible" : "false",
    "DBName":"csye6225"
  }
},
    "MyS3Bucket" : {
          "Type" : "AWS::S3::Bucket",
          "Properties" : {
            "BucketName" : {"Ref":"ParamS3Name"}
          }
       }
   },
    "Parameters" : {
          "ParamVpcID" : {
            "Type" : "String"
       },
          "ParamS3Name" : {
            "Type" : "String"
       },
          "ParamSubnetId1" : {
            "Type" : "String"
       },
          "ParamSubnetId2" : {
            "Type" : "String"
       },
          "ParamSubnetId3" : {
            "Type" : "String"
       },
          "ParamSubnetId4" : {
            "Type" : "String"
       }
          
    }
}
